[package]
name = "linguist-termcolor"
version = "0.1.1"
edition = "2021"
authors = ["tonywu6 <tonywu6@protonmail.com>"]
description = "Query GitHub's library for colors for programming languages"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tonywu6/linguist-termcolor"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
color-art = "0.3.8"
colored = "2.1.0"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_yaml = "0.9.34"

[[bin]]
name = "linguist-termcolor"
path = "src/main.rs"

# [target.'cfg(target_family="wasm")'.dependencies]
# getrandom = { version = "0.2", features = ["js"] }
